--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "transparse",
-  "version": "0.0.1",
+  "name": "pokedex-web",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
